[package]
name = "secret-certificat-azure-exporter"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.35.1", default-features = false, features = ["macros", "net", "rt-multi-thread"] }

[profile.release]
strip = true	    # Automatically strip symbols from the binary
lto = "fat"         # Enable link time optimization
codegen-units = 1
