[package]
name = "secret-certificat-azure-exporter"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde", "std"] }
dotenv = { version = "0.15", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "net", "rt", "signal"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
redundant_pub_crate = "allow"

[profile.release]
strip = true	    # Automatically strip symbols from the binary
lto = "fat"         # Enable link time optimization
codegen-units = 1
